--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,24 @@
 language: cpp
+os:
+  - linux
+  - osx
 compiler:
   - clang
   - gcc
 before_install:
  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+ - sudo add-apt-repository -y ppa:jtaylor/jtaylor
  - sudo apt-get update -qq
  - if [ "$CXX" = "clang++" ]; then sudo apt-get install -qq libstdc++-4.8-dev; fi
  - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
  - sudo apt-get install libgtest-dev
  - "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
+ - sudo apt-get install -qq libc6-dbg
+ - sudo apt-get install -qq valgrind
  - make all_tests
 script:
- - valgrind all_tests 
+ - valgrind --leak-check=full --show-reachable=yes all_tests 
 notifications:
   recipients:
     - dannnno16@gmail.com
