--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,17 @@ compiler:
   - clang
   - gcc
 before_install:
- - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+ - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
  - sudo add-apt-repository -y ppa:jtaylor/jtaylor
  - sudo apt-get update -qq
- - if [ "$CXX" = "clang++" ]; then sudo apt-get install -qq libstdc++-4.8-dev; fi
- - if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
- - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+ - if [ "$CXX" = "clang++" ]; then 
+     sudo apt-get install -qq libstdc++-4.8-dev; 
+   else 
+     if [ "$CXX" = "g++" ]; then 
+       sudo apt-get install -qq g++-4.8; 
+       export CXX="g++-48" CC="gcc-4.8";
+     fi
+   fi
  - sudo apt-get install libgtest-dev
  - "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
  - sudo apt-get install -qq libc6-dbg
@@ -20,6 +25,8 @@ script:
 after_success:
  - sudo apt-get install python-pip
  - pip install gcovr
+ # gcovr is only a script, and won't run without this
+ - PATH=$PYTHONHOME/scripts:$PATH
  - python gcovr -r .
 
 notifications:
