Added more linkedlist stuff.  Getting close to switching to deque, then arraylist

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,8 @@ script:
 after_success:
  - sudo apt-get install python-pip
  - sudo pip install gcovr
- # gcovr is only a script, and won't run without this
- - PATH=$PYTHONHOME/scripts:$PATH
- - python gcovr -r .
-
- - python gcovr -r .
+ - echo $PYTHONHOME
+ - python $PYTHONHOME/scripts/gcovr -r .
 
 notifications:
   recipients:
