--- a/.travis.yml
+++ b/.travis.yml
@@ -5,32 +5,32 @@ compiler:
   - gcc
 
 before_install:
- - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+ - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
  - sudo add-apt-repository -y ppa:jtaylor/jtaylor
  - sudo apt-get update -qq
  - if [ "$CXX" = "clang++" ]; then 
-     sudo apt-get install -qq libstdc++-4.8-dev;
+     sudo apt-get install -y -qq libstdc++-4.8-dev;
    fi
  - if [ "$CXX" = "g++" ]; then 
-     sudo apt-get install -qq g++-4.8; 
+     sudo apt-get install -y -qq g++-4.8; 
    fi
  - if [ "$CXX" = "g++" ]; then 
      export CXX="g++-4.8" CC="gcc-4.8"; 
    fi
- - sudo apt-get install libgtest-dev
+ - sudo apt-get install -y libgtest-dev
  - "cd /usr/src/gtest && sudo cmake . && sudo cmake --build . && sudo mv libg* /usr/local/lib/ ; cd -"
- - sudo apt-get install -qq libc6-dbg
- - sudo apt-get install -qq valgrind
+ - sudo apt-get install -y -qq libc6-dbg
+ - sudo apt-get install -y -qq valgrind
  - make tests
 
 script:
  - valgrind --leak-check=full --show-reachable=yes ./all_tests 
 
 after_success:
- - sudo apt-get install python-pip
- - sudo pip install gcovr
- - echo $PYTHONHOME
- - python $PYTHONHOME/scripts/gcovr -r .
+ - sudo apt-get install -y python-pip
+ - sudo pip install -y gcovr
+ - echo $PATH
+ - python ~/bin/scripts/gcovr -r .
 
 notifications:
   recipients:
