Working on mapping types

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,8 @@ script:
 after_success:
  - sudo apt-get install -y python-pip
  - sudo pip install -y gcovr
- - ls /usr/bin/python -l
- - ls /usr/bin/python/scripts -l
- - python /usr/bin/python/scripts/gcovr -r .
+ - ls /usr/bin/python
+ - python /usr/bin/python/Python2.7/scripts/gcovr -r .
 
 notifications:
   recipients:
